<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/colorPrimary"
    tools:context=".view.CameraXView"
    android:layout_weight="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titlePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/StatusPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/hourPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/image_view"
        android:scaleType="centerCrop"
        android:src="@drawable/image_defaut"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/image_view"
        android:layout_weight="50"
        />

    <Button
        android:id="@+id/capture_image_btn"
        android:text="@string/btnCatpure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/commentaire"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_gravity="left"
        />

    <EditText
        android:id="@+id/commentaireTxt"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="left"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:hint="@string/ajouter_un_commentaire"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/addPhotoAndCommmentary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="15dp"
        android:text="@string/ajouter"
        android:textSize="10sp"
        tools:ignore="SmallSp" />

</LinearLayout>