<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp"
    android:layout_margin="20dp">

    <LinearLayout
        android:id="@+id/hourLinear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/hourTM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"/>


        <ImageButton
            android:id="@+id/deleteBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#80000000"
            android:backgroundTint="#80000000"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:src="@android:drawable/ic_delete"
            android:layout_marginStart="280dp"
            android:contentDescription="@string/delete">
        </ImageButton>
    </LinearLayout>

    <ImageView
        android:id="@+id/photoTL"
        android:layout_width="345dp"
        android:layout_height="300dp"
        android:src="@drawable/image_defaut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/photo" />

    <TextView
        android:id="@+id/CommentaireTitre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:text="@string/commentaire"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/photoTL"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/commentaireTxt"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/noir"
        android:textSize="10sp"
        android:layout_marginTop="30dp"
        tools:ignore="SmallSp"
        app:layout_constraintTop_toTopOf="@+id/CommentaireTitre"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="143dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
